# remote-office-sync-engine

./: .gitignore  DIRECTORY_RENAME_IMPLEMENTATION.md  HOW_IT_WORKS.md  LICENSE  README.md  bug_missing_main_file_after_conflict.md  case_conflict_test_plan.md  config.example.yaml  config.template.yaml  config.yaml  create_test_files.ps1  env.template  pyproject.toml  requirements.txt  run_manual_tests.ps1  run_sync.bat  run_sync.ps1  sync_state.db  test_attribute_sync_e2e.py  test_case26_debug.ps1  test_case26_debug2.ps1  test_case26_only.ps1  test_case_conflicts_comprehensive.py  test_case_deletion_real.py  test_deletion_after_conflict.py  test_deletion_real.py  test_directory_rename_integration.ps1  test_normal_deletion.py  test_scan_debug.py  tmp_config.yaml
.claude/: claude.md
.deleted/: 20251122_222639_testfile_001.js
.github/workflows/: black.yml  ruff.yml  (+2 more)
project_spec/: DIRECTORY_RENAME_IMPLEMENTATION.md  attribute_sync_design.md  bug_reports.md  case_conflict_test26.md  mvp_task_list.md  prd.md  task_list.md
remote_office_sync/: __init__.py  config_loader.py  conflict.py  dry_run_formatter.py  email_notifications.py  file_ops.py  filesystem_utils.py  logging_setup.py  main.py  scanner.py  soft_delete.py  state_db.py  sync_logic.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_attribute_sync.py  test_case_conflicts.py  test_config_loader.py  test_conflict.py  test_directory_deletion.py  test_directory_renames.py  test_dry_run_formatter.py  test_file_ops.py  test_main_conflict_handlers.py  test_scanner.py  test_state_db.py  test_sync_logic.py
(+3 files in other folders)
